# brewer-finance-tracker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pr-checks.yml
chaos/experiments/: secret-manager-fault.yaml
harness/pipelines/: README.md  pr-validation.yaml  production-deploy.yaml  staging-deploy.yaml
kubernetes/: README.md  namespace.yaml
kubernetes/harness-delegate/: Chart.yaml  README.md  values.yaml
kubernetes/harness-delegate/templates/: delegate-token-secret.yaml
scripts/: setup.sh
src/brewer_finance_tracker/: __init__.py  app.py  config.py  health.py  logging_config.py  plaid_link.py  sheets_writer.py  snowball_sync.py
src/brewer_finance_tracker/secrets/: __init__.py  manager.py
src/brewer_finance_tracker/webhook/: __init__.py  dispatcher.py  handler.py  validators.py
tests/: __init__.py  conftest.py  test_health.py  test_plaid_link.py  test_secrets.py  test_sheets_writer.py  test_snowball_sync.py  test_webhook.py
