[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewer-finance-tracker"
version = "0.1.0"
description = "Finance webhook receiver and event processor"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "functions-framework>=3.0",
    "google-cloud-secret-manager>=2.20",
    "plaid-python>=18.0",
    "gspread>=6.0",
    "google-auth>=2.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

# plaid-python ships no py.typed marker or stubs.
[[tool.mypy.overrides]]
module = ["plaid.*"]
ignore_missing_imports = true

# functions-framework ships no type stubs.
[[tool.mypy.overrides]]
module = ["functions_framework.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing"]
